# beidong_jiemian

./: CLAUDE.md  CMakeLists.txt  CMakeLists.txt.user.d08742c
.claude/: settings.local.json
data/: GroundTruth_TargetsA.json
memory/: MEMORY.md  data-flow-architecture.md
src/core/: DataTypes.h  DspWorker.cpp  SelfValidator.cpp  SelfValidator.h
src/ui/: MainWindow.cpp  MainWindow.h
